--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -10,6 +10,7 @@
   border-style: solid;
   border-width: 2px;
   border-radius: 50%;
+  opacity: 25%;
 }
 
 .dot {
@@ -21,23 +22,32 @@
   z-index: 1;
 }
 
-.form {
-  padding: 0.5vh;
-  border-radius: 0.5vh;
+.form form {
+  display: flex;
+  flex-direction: column;
   background-color: beige;
-  margin-top: auto;
+  border-radius: 0.5vh;
+  padding: 1.5vh;
+  margin: 1vh;
 }
 
 .form-box {
-  padding: 1vh;
-  padding-left: 1.5vh;
-  padding-right: 1.5vh;
+  padding: 1.5vh;
   border: 0.1vh;
   margin: 0.2vh;
   vertical-align: bottom;
   border-radius: 0.3vh;
   background-color: aliceblue;
   color: black;
+  font-size: medium;
+}
+
+.form-header {
+  text-align: right;
+  border-bottom: black 1px solid;
+  padding: 0.5vh;
+  font-weight: 600;
+  font-size: large;
 }
 
 .form-box::placeholder {
@@ -76,7 +86,7 @@ td {
   font-weight: 500;
 }
 
-tr:nth-child(even) {
+tbody tr:nth-child(odd) {
   background-color: bisque;
 }
 
@@ -95,11 +105,16 @@ tr:nth-child(even) {
   padding-top: 0.5vh;
 }
 
-.instruction-body span {
+.instruction-body .keys {
   background-color: white;
   border: gray 1px solid;
   padding-left: 5px;
   padding-right: 5px;
+  float: right;
+}
+
+.instruction-body .text {
+  margin-right: 1vh;
 }
 
 .instruction-body div {
@@ -108,15 +123,27 @@ tr:nth-child(even) {
 
 .instruction {
   background-color: beige;
-  padding: 1vh;
+  margin: 1vh;
+  margin-right: 0vh;
   border-radius: 0.5vh;
-  position: absolute;
-  left: 1vh;
-  top: 1vh;
+  padding: 1.5vh;
+  font-size: large;
 }
 
 .instruction-head {
   border-bottom: black 1px solid;
   padding: 0.5vh;
   font-weight: 600;
+}
+
+.toast {
+  width: 10vh;
+  background-color: gray;
+  color: #fff;
+  text-align: center;
+  border-radius: 0.5vh;
+  padding: 1vh;
+  position: absolute;
+  right: 1vh;
+  bottom: 1vh;
 }
